<resources>
    <string name="app_name">Pradeep Services</string>
    <string name="heading1">Trust</string>
    <string name="heading2">Excellence </string>
    <string name="heading3">Awarded</string>
    <string name="desc1">Your trusted guide to financial\n security and prosperity.</string>
    <string name="desc2">Proven excellence, personalized\n financial solutions.</string>
    <string name="desc3">Awarded by MDRT-USA, trusted \npartener in financial planning. </string>
    <string name="about_us_text">नमस्कार\n
        मैं प्रदीप साहू ,\n
        हमारा उद्देश्य 5000 परिवारों को आर्थिक रूप से सुरक्षित करना है जिसमे हमारे साथ अभी 800 परिवार शामिल हो चुके है मैं निरंतर 4 वर्षो से 800 संतुष्ट परिवारों को सेवा दे रहा हु ।\n
        मुझे LIC के इस क्षेत्र में -\n
        1.निरंतर 3 बार MDRT(USA) से सम्मानित जो बीमा के क्षेत्र का आस्कर अवार्ड के नाम से जाना जाता है ।\n
        2.इंटरनेशनल ट्रेनर से ट्रेनिंग प्रशिक्षण का प्रमाण पत्र ।\n
        3.रिटायरमेंट प्लानिंग में एक्सपर्ट ।\n
        ग्राम खाती को 1 वर्ष के भीतर 110 परिवारों को सुरक्षित कर बीमा ग्राम घोषित करना ।\n
        Pradeep Sahu\n
        Life Advisor\n
        Retainment Planing Expert\n
        MDRT USA\n
        संपर्क - 8959968862
    </string>
    <string name="about_us">About us</string>
    <string name="our_special_plans">Our Special Plans</string>
    <string name="gallery">Gallery</string>
    <string name="plans_and_policies">Plans and Policies</string>
    <string name="enquiry_feedback"><![CDATA[Enquiry & Feedback]]></string>
    <string name="learning_material">Learning Material</string>
    <string name="important_links">Important Links</string>
    <string name="your_policies">Your Policies</string>
    <string name="good_afternoon">Good afternoon!</string>
    <string name="good_morning">Good morning!</string>
    <string name="good_evening">Good evening!</string>
    <string name="enter_your_query_here">Enter your query here</string>
    <string name="submit">Submit</string>
    <string name="preview">Preview</string>
    <string name="next">Next</string>
    <string name="get_started">Get Started</string>
    <string name="login_now">Login Now</string>
    <string name="please_login_to_continue_using_our_app">Please login to continue using our app.</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="login">Login</string>
    <string name="sign_up">Sign Up</string>
    <string name="please_register_to_continue_using_our_app">Please register to continue using our app.</string>
    <string name="i_agree_with_privacy_policy">I agree with privacy policy</string>
    <string name="name">Name</string>
    <string name="mobile">Mobile</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="register">Register</string>
    <string name="nice_to_see_you_again">Nice to see you again!</string>
    <string-array name="paymentFrequency">
        <item>Single</item>
        <item>Monthly</item>
        <item>Quarterly</item>
        <item>Half Yearly</item>
        <item>Yearly</item>
    </string-array>
</resources>